--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
     // TUTORIAL DEPENDENCIES HERE
+    implementation 'androidx.appcompat:appcompat:1.3.0'
 
 
 }
